samples/_failures_safe/1761634172_035176_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83888b59.c: In function ‘print_token’:
./samples/SAFE/__tmp_83888b59.c:162:9: error: expected expression at end of input
  162 |         "NUMBER",
      |         ^~~~~~~~
./samples/SAFE/__tmp_83888b59.c:162:9: error: expected declaration or statement at end of input
